; ModuleID = '/home/carl/AnghaBench/memcached/extr_slabs.c_global_page_pool_size.c'
source_filename = "/home/carl/AnghaBench/memcached/extr_slabs.c_global_page_pool_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@slabs_lock = common dso_local global i32 0, align 4
@mem_malloced = common dso_local global i64 0, align 8
@mem_limit = common dso_local global i64 0, align 8
@slabclass = common dso_local global %struct.TYPE_2__* null, align 8
@SLAB_GLOBAL_PAGE_POOL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @global_page_pool_size(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = call i32 @pthread_mutex_lock(i32* @slabs_lock)
  %5 = load i32*, i32** %2, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %14

7:                                                ; preds = %1
  %8 = load i64, i64* @mem_malloced, align 8
  %9 = load i64, i64* @mem_limit, align 8
  %10 = icmp sge i64 %8, %9
  %11 = zext i1 %10 to i64
  %12 = select i1 %10, i32 1, i32 0
  %13 = load i32*, i32** %2, align 8
  store i32 %12, i32* %13, align 4
  br label %14

14:                                               ; preds = %7, %1
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** @slabclass, align 8
  %16 = load i64, i64* @SLAB_GLOBAL_PAGE_POOL, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i64 %16
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  store i32 %19, i32* %3, align 4
  %20 = call i32 @pthread_mutex_unlock(i32* @slabs_lock)
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
